@@ -1,5 +1,5 @@
 * Allow H to have objects as keys
-* alias_method and alias_method_chain
+* alias_method_chain
 * callbacks
 * look into __callStatic for extending static methods
 * Add real tests
