@@ -22,6 +22,7 @@
   * Rename Enumerable#includes to Enumerable#has_value
   * Add Enumerable#has_key
   * Enumerable#offsetGet accepts an optional default value
+  * Add alias_method support
 
 2009-03-13 - Sean Huber (shuber@huberry.com)
   * Add Enumerable (incomplete)
